--- a/TourPlanner.UI/Views/MainWindow.xaml
+++ b/TourPlanner.UI/Views/MainWindow.xaml
@@ -5,6 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:TourPlanner.UI.Views"
         xmlns:views="clr-namespace:TourPlanner.UI.Views"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:packIcon="http://materialdesigninxaml.net/winfx/xaml/controls"
         mc:Ignorable="d"
         Title="TourPlanner" Height="600" Width="920"
         Background="Transparent"
@@ -62,11 +64,8 @@
             <Grid Grid.Row="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="160"/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition Width="35"/>
-                    <ColumnDefinition Width="35"/>
-                    <ColumnDefinition Width="35"/>
-                    <ColumnDefinition Width="10"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Grid.Column="0" 
@@ -83,7 +82,7 @@
                         Style="{StaticResource LogButtonStyle}"
                         Content="Show Logs"
                         HorizontalAlignment="Right"
-                        Margin="0,0,10,0"
+                        Margin="0,0,30,0"
                         Click="buttonShowLogs_Click"
                         Background="Transparent"
                         Foreground="#F5ECD5"
@@ -102,101 +101,25 @@
                     </Button.Template>
                 </Button>
 
-                <Button Grid.Column="2"
-                        x:Name="buttonMinimize"
-                        Content="-"
-                        Click="buttonMinimize_Click"
-                        Background="Transparent"
-                        Foreground="#F5ECD5"
-                        BorderThickness="0"
-                        Padding="10,5"
-                        FontSize="16"
-                        FontWeight="Bold">
-                    <Button.Template>
-                        <ControlTemplate TargetType="Button">
-                            <Border Background="{TemplateBinding Background}"
-                                    BorderBrush="{TemplateBinding BorderBrush}"
-                                    BorderThickness="{TemplateBinding BorderThickness}"
-                                    CornerRadius="5">
-                                <ContentPresenter HorizontalAlignment="Center" 
-                                                VerticalAlignment="Center"/>
-                            </Border>
-                        </ControlTemplate>
-                    </Button.Template>
-                    <Button.Resources>
-                        <Style TargetType="Border">
-                            <Style.Triggers>
-                                <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Background" Value="#4A5A36"/>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Button.Resources>
-                </Button>
+                <StackPanel Grid.Column="2"
+                            Orientation="Horizontal"
+                            Margin="10,0,0,0">
+                    <Button x:Name="buttonMinimize"
+                            Content="{materialDesign:PackIcon Kind=WindowMinimize}"
+                            Click="buttonMinimize_Click"
+                            Style="{StaticResource WindowButtonStyle}"/>
 
-                <Button Grid.Column="3"
-                        x:Name="buttonSize"
-                        Content="_"
-                        Click="buttonSize_Click"
-                        Background="Transparent"
-                        Foreground="#F5ECD5"
-                        BorderThickness="0"
-                        Padding="10,5"
-                        FontSize="16"
-                        FontWeight="Bold">
-                    <Button.Template>
-                        <ControlTemplate TargetType="Button">
-                            <Border Background="{TemplateBinding Background}"
-                                    BorderBrush="{TemplateBinding BorderBrush}"
-                                    BorderThickness="{TemplateBinding BorderThickness}"
-                                    CornerRadius="5">
-                                <ContentPresenter HorizontalAlignment="Center" 
-                                                VerticalAlignment="Center"/>
-                            </Border>
-                        </ControlTemplate>
-                    </Button.Template>
-                    <Button.Resources>
-                        <Style TargetType="Border">
-                            <Style.Triggers>
-                                <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Background" Value="#4A5A36"/>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Button.Resources>
-                </Button>
+                    <Button x:Name="buttonSize"
+                            Content="{materialDesign:PackIcon Kind=WindowMaximize}"
+                            Click="buttonSize_Click"
+                            Style="{StaticResource WindowButtonStyle}"/>
 
-                <Button Grid.Column="4"
-                        x:Name="buttonClose"
-                        Content="×"
-                        Click="buttonClose_Click"
-                        Background="Transparent"
-                        Foreground="#F5ECD5"
-                        BorderThickness="0"
-                        Padding="10,5"
-                        FontSize="16"
-                        FontWeight="Bold">
-                    <Button.Template>
-                        <ControlTemplate TargetType="Button">
-                            <Border Background="{TemplateBinding Background}"
-                                    BorderBrush="{TemplateBinding BorderBrush}"
-                                    BorderThickness="{TemplateBinding BorderThickness}"
-                                    CornerRadius="5">
-                                <ContentPresenter HorizontalAlignment="Center" 
-                                                VerticalAlignment="Center"/>
-                            </Border>
-                        </ControlTemplate>
-                    </Button.Template>
-                    <Button.Resources>
-                        <Style TargetType="Border">
-                            <Style.Triggers>
-                                <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Background" Value="#4A5A36"/>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Button.Resources>
-                </Button>
+                    <Button x:Name="buttonClose"
+                            Content="{materialDesign:PackIcon Kind=WindowClose}"
+                            Click="buttonClose_Click"
+                            Style="{StaticResource WindowCloseButtonStyle}"/>
+                </StackPanel>
+
             </Grid>
 
             <Grid Grid.Row="1">
