--- a/TourPlanner.UI/Theme/ActionButtonTheme.xaml
+++ b/TourPlanner.UI/Theme/ActionButtonTheme.xaml
@@ -6,14 +6,15 @@
         <Setter Property="Background" Value="#F0BB78"/>
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
-        <Setter Property="FontWeight" Value="Medium"/>
+        <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Margin" Value="2"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border Height="20" Width="20" 
-                            CornerRadius="10"
+                    <Border Height="25" Width="25" 
+                            CornerRadius="12"
                             BorderThickness="2"
                             BorderBrush="#d49c5d"
                             Background="{TemplateBinding Background}">
