--- a/TourPlanner.UI/Views/TourLogsManagement.xaml
+++ b/TourPlanner.UI/Views/TourLogsManagement.xaml
@@ -4,6 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:views="clr-namespace:TourPlanner.UI.Views"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:packIcon="http://materialdesigninxaml.net/winfx/xaml/controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
@@ -29,7 +31,7 @@
                 <TextBlock Text="Tour Logs"
                            Margin="10"
                            Foreground="Black"
-                           FontSize="18"
+                           FontSize="16"
                            FontFamily="/Resources/Fonts/#Montserrat"
                            FontWeight="Medium"
                            VerticalAlignment="Center"/>
@@ -37,20 +39,20 @@
                 <StackPanel Grid.Column="2"
                             Orientation="Horizontal"
                             HorizontalAlignment="Right"
-                            Margin="5,0">
-                    <Button Content="+"
+                            Margin="5">
+                    
+                    <Button Content="{materialDesign:PackIcon Kind=Add}"
                             Style="{StaticResource ActionButtonStyle}"
-                            Margin="2,0"
                             Command="{Binding CreateTourLogCommand}"/>
-                    <Button Content="-"
+                    
+                    <Button Content="{materialDesign:PackIcon Kind=Edit}"
                             Style="{StaticResource ActionButtonStyle}"
-                            Margin="2,0"
-                            Command="{Binding DeleteTourLogCommand}"/>
-                    <Button Content=".."
-                            Style="{StaticResource ActionButtonStyle}"
-                            Margin="2,0,5,0"
                             Command="{Binding EditTourLogCommand}"
                             CommandParameter="{Binding SelectedTourLog, Mode=OneWay}"/>
+                    
+                    <Button Content="{materialDesign:PackIcon Kind=Delete}"
+                            Style="{StaticResource ActionButtonStyle}"
+                            Command="{Binding DeleteTourLogCommand}"/>
                 </StackPanel>
             </Grid>
             
