--- a/TourPlanner.UI/Views/Home.xaml
+++ b/TourPlanner.UI/Views/Home.xaml
@@ -14,39 +14,19 @@
 
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="250"/>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
             <!-- Left side: Tour Management, Searchbar and Tour List -->
             <views:TourManagement Grid.Column="0"
+                                  Margin="0,0,5,0"
                                   DataContext="{Binding TourManagementViewModel}"/>
 
-            <Grid Grid.Column="1">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-            </Grid>
+            <views:TourNavbar Grid.Column="1" 
+                              Margin="5,0,0,0"
+                              DataContext="{Binding TourNavbarViewModel}"/>
 
-            <!-- Right side: Tour Details and Logs -->
-            <Grid Grid.Column="2"
-                  Margin="5,0,0,0">
-
-                <Grid.RowDefinitions>
-                    <!-- Navbar height -->
-                    <RowDefinition Height="*"/>
-                    <!-- Tour Logs header -->
-                    <RowDefinition Height="*"/>
-                    
-                </Grid.RowDefinitions>
-
-                <views:TourNavbar Grid.Row="0" 
-                                  DataContext="{Binding TourNavbarViewModel}"/>
-
-                <views:TourLogsManagement Grid.Row="1"
-                                          DataContext="{Binding TourLogsManagementViewModel}"/>
-            </Grid>
         </Grid>
     </Border>
 
