--- a/TourPlanner.UI/Views/MainWindow.xaml
+++ b/TourPlanner.UI/Views/MainWindow.xaml
@@ -63,19 +63,27 @@
 
             <Grid Grid.Row="0">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="160"/>
+                    <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Column="0" 
-                            Text="TourPlanner"
-                            Foreground="#F5ECD5"
-                            FontSize="20"
-                            VerticalAlignment="Center"
-                            FontFamily="/Resources/Fonts/#Montserrat"
-                            FontWeight="Bold"
-                            Margin="15,0,0,0"/>
+                <StackPanel Grid.Column="0"
+                            Orientation="Horizontal"
+                            Margin="10,0">
+                    <Image Source="/Resources/Icons/TourPlannerIcon.png"
+                           Width="40"
+                           Height="40"/>
+                    <TextBlock Grid.Column="0" 
+                                Text="TourPlanner"
+                                Foreground="#F5ECD5"
+                                FontSize="20"
+                                VerticalAlignment="Center"
+                                FontFamily="/Resources/Fonts/#Montserrat"
+                                FontWeight="Bold"
+                                Margin="15,0,0,0"/>
+                </StackPanel>
+
 
                 <Button Grid.Column="1"
                         x:Name="buttonShowLogs"
