--- a/TourPlanner.UI/App.xaml
+++ b/TourPlanner.UI/App.xaml
@@ -16,6 +16,7 @@
                 <ResourceDictionary Source="/Theme/FormSliderFieldTheme.xaml"/>
                 <ResourceDictionary Source="/Theme/FormDatePickerTheme.xaml"/>
                 <ResourceDictionary Source="/Theme/TabItemTheme.xaml"/>
+                <ResourceDictionary Source="/Theme/SearchbarTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
         </ResourceDictionary>
