--- a/TourPlanner.UI/Theme/ActionButtonTheme.xaml
+++ b/TourPlanner.UI/Theme/ActionButtonTheme.xaml
@@ -2,21 +2,21 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="ActionButtonStyle"
            TargetType="Button">
-        <Setter Property="Foreground" Value="Black"/>
-        <Setter Property="Background" Value="#F0BB78"/>
+        <Setter Property="Foreground" Value="#F5ECD5"/>
+        <Setter Property="Background" Value="#f28484"/>
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Margin" Value="2"/>
+        <Setter Property="Margin" Value="4"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <Border Height="25" Width="25" 
                             CornerRadius="12"
-                            BorderThickness="2"
-                            BorderBrush="#d49c5d"
+                            BorderThickness="1"
+                            BorderBrush="#ed5656"
                             Background="{TemplateBinding Background}">
                         <ContentPresenter VerticalAlignment="Center"
                                           HorizontalAlignment="Center"/>
@@ -26,7 +26,7 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#f7b2b2"/>
+                <Setter Property="Background" Value="#ed5656"/>
             </Trigger>
         </Style.Triggers>
     </Style>
