--- a/TourPlanner.UI/Theme/TabItemTheme.xaml
+++ b/TourPlanner.UI/Theme/TabItemTheme.xaml
@@ -2,8 +2,8 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="TabItemStyle"
            TargetType="TabItem">
-        <Setter Property="Foreground" Value="Black"/>
-        <Setter Property="Background" Value="#A4B465"/>
+        <Setter Property="Foreground" Value="#F5ECD5"/>
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontWeight" Value="Medium"/>
@@ -16,7 +16,6 @@
                             Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}"
-                            CornerRadius="6,6,0,0"
                             Padding="{TemplateBinding Padding}">
                         <ContentPresenter x:Name="ContentSite"
                                           VerticalAlignment="Center"
