--- a/TourPlanner.UI/Views/Map.xaml
+++ b/TourPlanner.UI/Views/Map.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     
-    <Border>
+    <Border CornerRadius="0,0,12,0">
         <Grid>
             <wpf:WebView2 x:Name="webView"/>
         </Grid>
