--- a/TourPlanner.UI/Views/TourDetails.xaml
+++ b/TourPlanner.UI/Views/TourDetails.xaml
@@ -6,7 +6,9 @@
              xmlns:local="clr-namespace:TourPlanner.UI.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <Border CornerRadius="0,0,12,0">
+        <Grid>
             
-    </Grid>
+        </Grid>
+    </Border>
 </UserControl>
