--- a/TourPlanner.UI/Views/TourList.xaml
+++ b/TourPlanner.UI/Views/TourList.xaml
@@ -6,57 +6,61 @@
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <Grid>
-        <!-- List containing all Tours -->
-        <ListView ItemsSource="{Binding Tours}"
-                  SelectedItem="{Binding SelectedTour, Mode=TwoWay}" 
-                  BorderThickness="0"
-                  Background="#F5ECD5">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding Name}"
-                               Foreground="Black"
-                               FontSize="16"
-                               Margin="0,10"
-                               FontFamily="/UILayer/Resources/Fonts/#Montserrat"/>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="Background" Value="#FFF6B6"/>
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="ListViewItem">
-                                <Border x:Name="Bd"
-                            Background="{TemplateBinding Background}"
-                            Padding="5"
-                            SnapsToDevicePixels="true">
-                                    <ContentPresenter />
-                                </Border>
-                                <ControlTemplate.Triggers>
-                                    <Trigger Property="IsSelected" Value="True">
-                                        <Setter TargetName="Bd" Property="Background" Value="#F0BB78"/>
-                                    </Trigger>
-                                    <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter TargetName="Bd" Property="Background" Value="#f7b2b2"/>
-                                    </Trigger>
-                                </ControlTemplate.Triggers>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </ListView.ItemContainerStyle>
-        </ListView>
+    <Border CornerRadius="0,0,12,12"
+            BorderThickness="0"
+            Background="#F5ECD5"
+            ClipToBounds="True">
+        <Grid>
+            <!-- List containing all Tours -->
+            <ListView ItemsSource="{Binding Tours}"
+                      SelectedItem="{Binding SelectedTour, Mode=TwoWay}" 
+                      Background="Transparent">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Name}"
+                                   Foreground="Black"
+                                   FontSize="16"
+                                   Margin="0,10"
+                                   FontFamily="/UILayer/Resources/Fonts/#Montserrat"/>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="Background" Value="#f7b2b2"/>
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="ListViewItem">
+                                    <Border x:Name="Bd"
+                                            Background="{TemplateBinding Background}"
+                                            Padding="5"
+                                            SnapsToDevicePixels="true">
+                                        <ContentPresenter />
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsSelected" Value="True">
+                                            <Setter TargetName="Bd" Property="Background" Value="#f28484"/>
+                                        </Trigger>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter TargetName="Bd" Property="Background" Value="#f28484"/>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListView.ItemContainerStyle>
+            </ListView>
 
-        <TextBlock Text="No results found."
-                   Foreground="#C74767"
-                   FontSize="14"
-                   FontFamily="/Resources/Fonts/#Montserrat"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
-                   Margin="5"
-                   Visibility="{Binding HasNoResults, 
-                                Converter={StaticResource BooleanToVisibilityConverter}}"/>
-    </Grid>
+            <TextBlock Text="No results found."
+                       Foreground="#C74767"
+                       FontSize="14"
+                       FontFamily="/Resources/Fonts/#Montserrat"
+                       FontWeight="Medium"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       Visibility="{Binding HasNoResults, 
+                                    Converter={StaticResource BooleanToVisibilityConverter}}"/>
+        </Grid>
+    </Border>
 </UserControl>
