--- a/TourPlanner.UI/Views/TourLogsManagement.xaml
+++ b/TourPlanner.UI/Views/TourLogsManagement.xaml
@@ -9,41 +9,43 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <Grid Background="#A4B465">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+    <Border CornerRadius="0,0,12,0">
+        <Grid Background="#A4B465">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-        <!-- Header with Title and Buttons -->
-        <Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
+            <!-- Header with Title and Buttons -->
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
 
-            <StackPanel Grid.Column="1"
+                <StackPanel Grid.Column="1"
                         Orientation="Horizontal"
                         HorizontalAlignment="Right"
                         Margin="5">
-                    
-                <Button Content="{materialDesign:PackIcon Kind=Add}"
+
+                    <Button Content="{materialDesign:PackIcon Kind=Add}"
                         Style="{StaticResource ActionButtonStyle}"
                         Command="{Binding CreateTourLogCommand}"/>
-                    
-                <Button Content="{materialDesign:PackIcon Kind=Edit}"
+
+                    <Button Content="{materialDesign:PackIcon Kind=Edit}"
                         Style="{StaticResource ActionButtonStyle}"
                         Command="{Binding EditTourLogCommand}"
                         CommandParameter="{Binding SelectedTourLog, Mode=OneWay}"/>
-                    
-                <Button Content="{materialDesign:PackIcon Kind=Delete}"
+
+                    <Button Content="{materialDesign:PackIcon Kind=Delete}"
                         Style="{StaticResource ActionButtonStyle}"
                         Command="{Binding DeleteTourLogCommand}"/>
-            </StackPanel>
-        </Grid>
-            
-        <!--- Tour Logs Table -->
-        <views:TourLogList Grid.Row="1"
+                </StackPanel>
+            </Grid>
+
+            <!--- Tour Logs Table -->
+            <views:TourLogList Grid.Row="1"
                            DataContext="{Binding TourLogListViewModel}"/>
-    </Grid>
+        </Grid>
+    </Border>
 </UserControl>
